--- a/src/components/App.css
+++ b/src/components/App.css
@@ -16,6 +16,20 @@ body {
   /* object-fit: cover; */
 }
 
+.team-img {
+  height: 300px;
+  width: 300px;
+  background-color: #000;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.team-img img {
+  object-fit: cover;
+  /* width: 100%; */
+  height: 300px;
+}
+
 .service-card {
   padding: 3em 3em;
 }
