--- a/src/components/App.css
+++ b/src/components/App.css
@@ -5,8 +5,8 @@ body {
 }
 
 .logo {
-  height: 35px;
-  width: 100%;
+  height: 30px;
+  width: 50%;
 }
 
 .img {
@@ -45,6 +45,9 @@ h1, h4, h5 {
   font-size: 18px;
 }
 
+#hero h1 {
+  letter-spacing: 2px;
+}
 
 #services p {
   font-size: 16px;
